--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,22 @@
+.post-editor {
+    margin: 1em 20%
+}
 
+.post-editor-btn {
+    float: right;
+    margin-top: 1em;
+}
+
+.post-body {
+    margin: 1em 20%;
+}
+
+@media (max-width: 900px) {
+    .post-editor {
+        margin: 1em;
+    }
+
+    .post-body {
+        margin: 1em 20%;
+    }
+}
