Bugs fix for Snake Game logic

--- a/src/Divs/SnakeGameDiv/SnakeGameDiv.css
+++ b/src/Divs/SnakeGameDiv/SnakeGameDiv.css
@@ -2,7 +2,7 @@
   text-align: center;
   width:40vw;
   margin: 0 auto;
-  background: lightblue;
+  background: #4bbfc3;
   padding-bottom: 2%;
   padding-top: 1%;
 
